[gd_scene load_steps=6 format=3 uid="uid://w6fj7o3ydc5"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_menu"]
[ext_resource type="Texture2D" uid="uid://bk4kgruw03wpd" path="res://scenes/ui/wallpaperWindowsXP.jpg" id="2_66ieq"]
[ext_resource type="Texture2D" uid="uid://djg8spkwnmv7p" path="res://scenes/ui/Window-Frame-Template.png" id="3_bltm6"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 64
font_color = Color(1, 0.1, 0.1, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_subtitle"]
font_size = 20
font_color = Color(0.8, 0.8, 0.8, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="TextureRect" parent="."]
z_index = -10
layout_mode = 0
offset_right = 1152.0
offset_bottom = 649.0
texture = ExtResource("2_66ieq")

[node name="Background2" type="TextureRect" parent="."]
z_index = -10
layout_mode = 0
offset_left = -64.0
offset_top = -133.0
offset_right = 1229.0
offset_bottom = 777.0
texture = ExtResource("3_bltm6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -130.0
offset_right = 150.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="PlayButton" type="Button" parent="VBoxContainer"]
z_index = 10
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "‚ñ∂ START CLEANUP"

[node name="StoryButton" type="Button" parent="VBoxContainer"]
z_index = 10
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "üìñ VIEW STORY"

[node name="LevelsButton" type="Button" parent="VBoxContainer"]
z_index = 10
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "üóÇ FILE SELECT"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
z_index = 10
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "‚öô SETTINGS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
z_index = 10
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "‚èª SHUTDOWN"

[node name="TitleLabel" type="Label" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -371.0
offset_top = -237.0
offset_right = 374.0
offset_bottom = -149.0
grow_horizontal = 2
grow_vertical = 2
text = "‚ö† SYSTEM CLEANER ‚ö†"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -164.0
offset_right = 252.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
text = "VIRUS REMOVAL PROTOCOL v2.0"
label_settings = SubResource("LabelSettings_subtitle")
horizontal_alignment = 1
vertical_alignment = 1
